packages/dartcv/src/calib3d/calib3d.h

// Finds an object pose from 3D-2D point correspondences using the RANSAC scheme.
// bool cv::solvePnPRansac (InputArray objectPoints, InputArray imagePoints, InputArray cameraMatrix, InputArray distCoeffs, OutputArray rvec, OutputArray tvec, bool useExtrinsicGuess=false, int iterationsCount=100, float reprojectionError=8.0, double confidence=0.99, OutputArray inliers=noArray(), int flags=SOLVEPNP_ITERATIVE)
CvStatus *cv_solvePnPRansac(MatIn objectPoints, MatIn imagePoints, MatIn cameraMatrix, MatIn distCoeffs, MatOut rvec,
                            MatOut tvec, bool useExtrinsicGuess, int iterationsCount, float reprojectionError,
                            double confidence, MatOut inliers, int flags, bool *rval, CvCallback_0 callback);
// bool cv::solvePnPRansac (InputArray objectPoints, InputArray imagePoints, InputOutputArray cameraMatrix, InputArray distCoeffs, OutputArray rvec, OutputArray tvec, OutputArray inliers, const UsacParams &params=UsacParams())
CvStatus *cv_solvePnPRansac_1(Mat objectPoints, Mat imagePoints, Mat cameraMatrix, Mat distCoeffs, Mat rvec, Mat tvec,
                              Mat inliers, struct UsacParams params, bool *rval, CvCallback_0 callback);
// Refine a pose (the translation and the rotation that transform a 3D point expressed in the object coordinate frame to the camera coordinate frame) from a 3D-2D point correspondences and starting from an initial solution.
// void cv::solvePnPRefineLM (InputArray objectPoints, InputArray imagePoints, InputArray cameraMatrix, InputArray distCoeffs, InputOutputArray rvec, InputOutputArray tvec, TermCriteria criteria=TermCriteria(TermCriteria::EPS+TermCriteria::COUNT, 20, FLT_EPSILON))
CvStatus *cv_solvePnPRefineLM(Mat objectPoints, Mat imagePoints, Mat cameraMatrix, Mat distCoeffs, Mat rvec, Mat tvec,
                              struct TermCriteria criteria, CvCallback_0 callback);
// Refine a pose (the translation and the rotation that transform a 3D point expressed in the object coordinate frame to the camera coordinate frame) from a 3D-2D point correspondences and starting from an initial solution.
// void cv::solvePnPRefineVVS (InputArray objectPoints, InputArray imagePoints, InputArray cameraMatrix, InputArray distCoeffs, InputOutputArray rvec, InputOutputArray tvec, TermCriteria criteria=TermCriteria(TermCriteria::EPS+TermCriteria::COUNT, 20, FLT_EPSILON), double VVSlambda=1)
CvStatus *cv_solvePnPRefineVVS(Mat objectPoints, Mat imagePoints, Mat cameraMatrix, Mat distCoeffs, Mat rvec, Mat tvec,
                               struct TermCriteria criteria, double VVSlambda, CvCallback_0 callback);
// Calibrates a stereo camera set up. This function finds the intrinsic parameters for each of the two cameras and the extrinsic parameters between the two cameras.
// double cv::stereoCalibrate (InputArrayOfArrays objectPoints, InputArrayOfArrays imagePoints1, InputArrayOfArrays imagePoints2, InputOutputArray cameraMatrix1, InputOutputArray distCoeffs1, InputOutputArray cameraMatrix2, InputOutputArray distCoeffs2, Size imageSize, InputOutputArray R, InputOutputArray T, OutputArray E, OutputArray F, OutputArray perViewErrors, int flags=CALIB_FIX_INTRINSIC, TermCriteria criteria=TermCriteria(TermCriteria::COUNT+TermCriteria::EPS, 30, 1e-6));
// double cv::stereoCalibrate (InputArrayOfArrays objectPoints, InputArrayOfArrays imagePoints1, InputArrayOfArrays imagePoints2, InputOutputArray cameraMatrix1, InputOutputArray distCoeffs1, InputOutputArray cameraMatrix2, InputOutputArray distCoeffs2, Size imageSize, OutputArray R, OutputArray T, OutputArray E, OutputArray F, int flags=CALIB_FIX_INTRINSIC, TermCriteria criteria=TermCriteria(TermCriteria::COUNT+TermCriteria::EPS, 30, 1e-6));
// double cv::stereoCalibrate (InputArrayOfArrays objectPoints, InputArrayOfArrays imagePoints1, InputArrayOfArrays imagePoints2, InputOutputArray cameraMatrix1, InputOutputArray distCoeffs1, InputOutputArray cameraMatrix2, InputOutputArray distCoeffs2, Size imageSize, InputOutputArray R, InputOutputArray T, OutputArray E, OutputArray F, OutputArrayOfArrays rvecs, OutputArrayOfArrays tvecs, OutputArray perViewErrors, int flags=CALIB_FIX_INTRINSIC, TermCriteria criteria=TermCriteria(TermCriteria::COUNT+TermCriteria::EPS, 30, 1e-6));
CvStatus *cv_stereoCalibrate(VecMat objectPoints, VecMat imagePoints1, VecMat imagePoints2, MatInOut cameraMatrix1,
                             MatInOut distCoeffs1, MatInOut cameraMatrix2, MatInOut distCoeffs2, CvSize imageSize,
                             MatInOut R, MatInOut T, MatOut E, MatOut F, VecMat rvecs, VecMat tvecs,
                             MatOut perViewErrors, int flags, struct TermCriteria criteria, double *rval,
                             CvCallback_0 callback);
// Computes rectification transforms for each head of a calibrated stereo camera.
// void cv::stereoRectify (InputArray cameraMatrix1, InputArray distCoeffs1, InputArray cameraMatrix2, InputArray distCoeffs2, Size imageSize, InputArray R, InputArray T, OutputArray R1, OutputArray R2, OutputArray P1, OutputArray P2, OutputArray Q, int flags=CALIB_ZERO_DISPARITY, double alpha=-1, Size newImageSize=Size(), Rect *validPixROI1=0, Rect *validPixROI2=0);
CvStatus *cv_stereoRectify(MatIn cameraMatrix1, MatIn distCoeffs1, MatIn cameraMatrix2, MatIn distCoeffs2,
                           CvSize imageSize, MatIn R, MatIn T, MatOut R1, MatOut R2, MatOut P1, MatOut P2, MatOut Q,
                           int flags, double alpha, CvSize newImageSize, struct CvRect *validPixROI1,
                           struct CvRect *validPixROI2, CvCallback_0 callback);
// Computes a rectification transform for an uncalibrated stereo camera.
// bool cv::stereoRectifyUncalibrated (InputArray points1, InputArray points2, InputArray F, Size imgSize, OutputArray H1, OutputArray H2, double threshold=5);
CvStatus *cv_stereoRectifyUncalibrated(MatIn points1, MatIn points2, MatIn F, CvSize imgSize, MatOut H1, MatOut H2,
                                       double threshold, bool *rval, CvCallback_0 callback);
// This function reconstructs 3-dimensional points (in homogeneous coordinates) by using their observations with a stereo camera.
// void cv::triangulatePoints (InputArray projMatr1, InputArray projMatr2, InputArray projPoints1, InputArray projPoints2, OutputArray points4D);
CvStatus *cv_triangulatePoints(MatIn projMatr1, MatIn projMatr2, MatIn projPoints1, MatIn projPoints2, MatOut points4D,
                               CvCallback_0 callback);
// Transforms an image to compensate for lens distortion.
// void cv::undistort (InputArray src, OutputArray dst, InputArray cameraMatrix, InputArray distCoeffs, InputArray newCameraMatrix=noArray());
CvStatus *cv_undistort(
    Mat src, Mat dst, Mat cameraMatrix, Mat distCoeffs, Mat newCameraMatrix, CvCallback_0 callback
);
// Compute undistorted image points position.
// void cv::undistortImagePoints (InputArray src, OutputArray dst, InputArray cameraMatrix, InputArray distCoeffs, TermCriteria=TermCriteria(TermCriteria::MAX_ITER+TermCriteria::EPS, 5, 0.01));
CvStatus *cv_undistortImagePoints(Mat src, Mat dst, Mat cameraMatrix, Mat distCoeffs, struct TermCriteria criteria,
                                  CvCallback_0 callback);