packages/dartcv/lib/src/g/calib3d.g.dart


  ffi.Pointer<CvStatus> cv_solvePnPRansac(
    imp1.MatIn objectPoints,
    imp1.MatIn imagePoints,
    imp1.MatIn cameraMatrix,
    imp1.MatIn distCoeffs,
    imp1.MatOut rvec,
    imp1.MatOut tvec,
    bool useExtrinsicGuess,
    int iterationsCount,
    double reprojectionError,
    double confidence,
    imp1.MatOut inliers,
    int flags,
    ffi.Pointer<ffi.Bool> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_solvePnPRansac(
      objectPoints,
      imagePoints,
      cameraMatrix,
      distCoeffs,
      rvec,
      tvec,
      useExtrinsicGuess,
      iterationsCount,
      reprojectionError,
      confidence,
      inliers,
      flags,
      rval,
      callback,
    );
  }

  late final _cv_solvePnPRansacPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Bool,
              ffi.Int,
              ffi.Float,
              ffi.Double,
              imp1.MatOut,
              ffi.Int,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>>('cv_solvePnPRansac');
  late final _cv_solvePnPRansac = _cv_solvePnPRansacPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatOut,
          imp1.MatOut,
          bool,
          int,
          double,
          double,
          imp1.MatOut,
          int,
          ffi.Pointer<ffi.Bool>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_solvePnPRansac_1(
    Mat objectPoints,
    Mat imagePoints,
    Mat cameraMatrix,
    Mat distCoeffs,
    Mat rvec,
    Mat tvec,
    Mat inliers,
    imp1.UsacParams params,
    ffi.Pointer<ffi.Bool> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_solvePnPRansac_1(
      objectPoints,
      imagePoints,
      cameraMatrix,
      distCoeffs,
      rvec,
      tvec,
      inliers,
      params,
      rval,
      callback,
    );
  }

  late final _cv_solvePnPRansac_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              Mat,
              Mat,
              Mat,
              Mat,
              Mat,
              imp1.UsacParams,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>>('cv_solvePnPRansac_1');
  late final _cv_solvePnPRansac_1 = _cv_solvePnPRansac_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, Mat, Mat, Mat,
          imp1.UsacParams, ffi.Pointer<ffi.Bool>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_solvePnPRefineLM(
    Mat objectPoints,
    Mat imagePoints,
    Mat cameraMatrix,
    Mat distCoeffs,
    Mat rvec,
    Mat tvec,
    imp1.TermCriteria criteria,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_solvePnPRefineLM(
      objectPoints,
      imagePoints,
      cameraMatrix,
      distCoeffs,
      rvec,
      tvec,
      criteria,
      callback,
    );
  }

  late final _cv_solvePnPRefineLMPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, Mat, Mat,
              imp1.TermCriteria, imp1.CvCallback_0)>>('cv_solvePnPRefineLM');
  late final _cv_solvePnPRefineLM = _cv_solvePnPRefineLMPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, Mat, Mat,
          imp1.TermCriteria, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_solvePnPRefineVVS(
    Mat objectPoints,
    Mat imagePoints,
    Mat cameraMatrix,
    Mat distCoeffs,
    Mat rvec,
    Mat tvec,
    imp1.TermCriteria criteria,
    double VVSlambda,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_solvePnPRefineVVS(
      objectPoints,
      imagePoints,
      cameraMatrix,
      distCoeffs,
      rvec,
      tvec,
      criteria,
      VVSlambda,
      callback,
    );
  }

  late final _cv_solvePnPRefineVVSPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              Mat,
              Mat,
              Mat,
              Mat,
              imp1.TermCriteria,
              ffi.Double,
              imp1.CvCallback_0)>>('cv_solvePnPRefineVVS');
  late final _cv_solvePnPRefineVVS = _cv_solvePnPRefineVVSPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, Mat, Mat,
          imp1.TermCriteria, double, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_stereoCalibrate(
    VecMat objectPoints,
    VecMat imagePoints1,
    VecMat imagePoints2,
    imp1.MatInOut cameraMatrix1,
    imp1.MatInOut distCoeffs1,
    imp1.MatInOut cameraMatrix2,
    imp1.MatInOut distCoeffs2,
    CvSize imageSize,
    imp1.MatInOut R,
    imp1.MatInOut T,
    imp1.MatOut E,
    imp1.MatOut F,
    VecMat rvecs,
    VecMat tvecs,
    imp1.MatOut perViewErrors,
    int flags,
    imp1.TermCriteria criteria,
    ffi.Pointer<ffi.Double> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_stereoCalibrate(
      objectPoints,
      imagePoints1,
      imagePoints2,
      cameraMatrix1,
      distCoeffs1,
      cameraMatrix2,
      distCoeffs2,
      imageSize,
      R,
      T,
      E,
      F,
      rvecs,
      tvecs,
      perViewErrors,
      flags,
      criteria,
      rval,
      callback,
    );
  }

  late final _cv_stereoCalibratePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecMat,
              VecMat,
              VecMat,
              imp1.MatInOut,
              imp1.MatInOut,
              imp1.MatInOut,
              imp1.MatInOut,
              CvSize,
              imp1.MatInOut,
              imp1.MatInOut,
              imp1.MatOut,
              imp1.MatOut,
              VecMat,
              VecMat,
              imp1.MatOut,
              ffi.Int,
              imp1.TermCriteria,
              ffi.Pointer<ffi.Double>,
              imp1.CvCallback_0)>>('cv_stereoCalibrate');
  late final _cv_stereoCalibrate = _cv_stereoCalibratePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecMat,
          VecMat,
          VecMat,
          imp1.MatInOut,
          imp1.MatInOut,
          imp1.MatInOut,
          imp1.MatInOut,
          CvSize,
          imp1.MatInOut,
          imp1.MatInOut,
          imp1.MatOut,
          imp1.MatOut,
          VecMat,
          VecMat,
          imp1.MatOut,
          int,
          imp1.TermCriteria,
          ffi.Pointer<ffi.Double>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_stereoRectify(
    imp1.MatIn cameraMatrix1,
    imp1.MatIn distCoeffs1,
    imp1.MatIn cameraMatrix2,
    imp1.MatIn distCoeffs2,
    CvSize imageSize,
    imp1.MatIn R,
    imp1.MatIn T,
    imp1.MatOut R1,
    imp1.MatOut R2,
    imp1.MatOut P1,
    imp1.MatOut P2,
    imp1.MatOut Q,
    int flags,
    double alpha,
    CvSize newImageSize,
    ffi.Pointer<imp1.CvRect> validPixROI1,
    ffi.Pointer<imp1.CvRect> validPixROI2,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_stereoRectify(
      cameraMatrix1,
      distCoeffs1,
      cameraMatrix2,
      distCoeffs2,
      imageSize,
      R,
      T,
      R1,
      R2,
      P1,
      P2,
      Q,
      flags,
      alpha,
      newImageSize,
      validPixROI1,
      validPixROI2,
      callback,
    );
  }

  late final _cv_stereoRectifyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              CvSize,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Int,
              ffi.Double,
              CvSize,
              ffi.Pointer<imp1.CvRect>,
              ffi.Pointer<imp1.CvRect>,
              imp1.CvCallback_0)>>('cv_stereoRectify');
  late final _cv_stereoRectify = _cv_stereoRectifyPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          CvSize,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatOut,
          imp1.MatOut,
          imp1.MatOut,
          imp1.MatOut,
          imp1.MatOut,
          int,
          double,
          CvSize,
          ffi.Pointer<imp1.CvRect>,
          ffi.Pointer<imp1.CvRect>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_stereoRectifyUncalibrated(
    imp1.MatIn points1,
    imp1.MatIn points2,
    imp1.MatIn F,
    CvSize imgSize,
    imp1.MatOut H1,
    imp1.MatOut H2,
    double threshold,
    ffi.Pointer<ffi.Bool> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_stereoRectifyUncalibrated(
      points1,
      points2,
      F,
      imgSize,
      H1,
      H2,
      threshold,
      rval,
      callback,
    );
  }

  late final _cv_stereoRectifyUncalibratedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              CvSize,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Double,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>>('cv_stereoRectifyUncalibrated');
  late final _cv_stereoRectifyUncalibrated =
      _cv_stereoRectifyUncalibratedPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              CvSize,
              imp1.MatOut,
              imp1.MatOut,
              double,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_triangulatePoints(
    imp1.MatIn projMatr1,
    imp1.MatIn projMatr2,
    imp1.MatIn projPoints1,
    imp1.MatIn projPoints2,
    imp1.MatOut points4D,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_triangulatePoints(
      projMatr1,
      projMatr2,
      projPoints1,
      projPoints2,
      points4D,
      callback,
    );
  }

  late final _cv_triangulatePointsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.CvCallback_0)>>('cv_triangulatePoints');
  late final _cv_triangulatePoints = _cv_triangulatePointsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatIn, imp1.MatIn,
          imp1.MatIn, imp1.MatOut, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_undistort(
    Mat src,
    Mat dst,
    Mat cameraMatrix,
    Mat distCoeffs,
    Mat newCameraMatrix,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_undistort(
      src,
      dst,
      cameraMatrix,
      distCoeffs,
      newCameraMatrix,
      callback,
    );
  }

  late final _cv_undistortPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, Mat, imp1.CvCallback_0)>>('cv_undistort');
  late final _cv_undistort = _cv_undistortPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, Mat, Mat, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_undistortImagePoints(
    Mat src,
    Mat dst,
    Mat cameraMatrix,
    Mat distCoeffs,
    imp1.TermCriteria criteria,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_undistortImagePoints(
      src,
      dst,
      cameraMatrix,
      distCoeffs,
      criteria,
      callback,
    );
  }
